fixed overflowing text problem

--- a/style.css
+++ b/style.css
@@ -168,27 +168,32 @@ input[type="checkbox"] {
     display: grid;
     gap: 1.7rem;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    grid-template-rows: 250px;
-    grid-auto-rows: 250px;
+    grid-auto-rows: minmax(250px, auto);
 }
   
 .book-item{
-    width: 100%;
+    
     border-radius: 0.6rem;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
     background-color: #eef2ff;
     box-sizing: border-box;
     display: grid;
-    grid-template-rows: repeat(2, 2fr) 1fr repeat(2, 3fr);
+    grid-template-rows: repeat(2, 3fr) 2fr repeat(2, 4fr);
     gap: 10px;
     padding: 1.4rem;
 }
 .book-item>h2, p{
-    align-self: start;
+    align-self: center;
     justify-self: center;
 }
 .book-item>h2{
     font-size: 1.5rem;
+    max-width: 100%;
+    display: grid;
+    height: 100%;
+    justify-content: center;
+    align-content: start;
+    overflow: hidden;
 }
 .book-item>p{
     padding-bottom: 5px;
@@ -196,7 +201,6 @@ input[type="checkbox"] {
 }
 .book-item>button{
     padding: 1rem 0.5rem;
-    width: 100%;
     border-radius: 0.3rem;
     border: none;
     background:#c7d2fe;
